syntax ="proto3";

package todo;

option go_package = "./proto";

message Todo {
    string id = 1;
    string title = 2;
    string description = 3;
    bool completed = 4;
}

message TodoRequest {
    string todo_id = 1;
}

message TodoResponse {
    Todo todo = 1;
}

message CreateTodoRequest {
    string title = 1;
    string description = 2;
}

message CreateTodoResponse {
    Todo todo = 1;
}

message UpdateTodoRequest {
    string todo_id = 1;
    string title = 2;
    string description = 3;
    bool completed = 4;
}

message UpdateTodoResponse {
    Todo todo = 1;
}

message DeleteTodoRequest {
    string todo_id = 1;
}

message DeleteTodoResponse {
    bool status = 1;
    string message = 2;
}

service TodoService {
    rpc GetTodo(TodoRequest) returns (TodoResponse);
    rpc CreateTodo(CreateTodoRequest) returns (CreateTodoResponse);
    rpc UpdateTodo(UpdateTodoRequest) returns (UpdateTodoResponse);
    rpc DeleteTodo(DeleteTodoRequest) returns (DeleteTodoResponse);
}